--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,11 @@
 <h1>
   {{title}}
 </h1>
+
+<form>
+<button type="button" class="btn btn-default" (click)="onSubmit();">Submit</button>
+</form>
+
 <ckeditor [(ngModel)]="content" debounce="500"> 
    <p>Hello <strong>world</strong></p>
 </ckeditor>
